<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Snow Volf 24.12.16 15.23-->
    <!--общее-->
    <string name="app_name">Web Dev Browser</string>
    <string name="action_settings">Settings</string>
    <string name="choose_button">Выбрать</string>
    <string name="error_label">Ошибка!</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="enter_url">Введите Url</string>
    <!--warnings-->
    <string name="warning">Предупреждение</string>
    <string name="user_agree">Я понял(а)</string>
    <string name="warning_swipe">Для закрытия диалога регулеровки свайпните вниз</string>
    <!--меню-->
    <string name="write_url">Ввести URL</string>
    <string name="refresh">Обновить</string>
    <string name="fontsize">Размер шрифта</string>
    <string name="scr_w">Ширина экрана</string>
    <string name="elements_outline">Границы элементов</string>
    <string name="save">Сохранить</string>
    <string name="get_content">Выбрать файл</string>
    <string name="cache_settings">Настройки кеша</string>
    <string name="about_program">О программе</string>
    <string name="getActivity_finish">Закрыть</string>
    <!--io-->
    <string name="storage_perm_error">Невозможно получить доступ к карте-SD</string>
    <string name="ex_storage_prem">Необходимы повышенные привелегии</string>
    <string name="ex_not_found_fm">Приложение для выбора файла не найдено!</string>
    <string name="export_html">Экспорт HTML</string>
    <string name="ex_sd">Проверьте доступность sd!</string>>
    <!--showAboutDialog-->
    <string name="about_title">Morphine (WDB)</string>
    <string name="about_text"><b>Разработчики:</b>\nАртём Слинкин (slartus)\nЕвгений Низамиев (RadiationX)\nАлександр Тайнюк (iSanechek)\n\nПомошник:\nАртём Жиганов (Snow Volf)\n\nOсобая благодарность:\nАлексей Шолохов (Морфий)</string>
    <!--showCacheDialog-->
    <string name="c_s">Сначала кеш, потом сеть</string>
    <string name="off_c">Отключить кеш</string>
    <string name="only_c">Только из кеша</string>
    <string name="ex_plus">Нахрена ты это сделал? Зачем нажал на плюс?</string>
    <string name="night_mode">Ночной режим</string>
    <string name="loading">Загрузка...</string>
    <string name="press_once_more">Нажмите еще раз, чтобы выйти</string>

</resources>
