<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item android:id="@+id/write_url"
        android:title="@string/write_url"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_pencil_white_24dp"/>

    <item android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:actionViewClass="android.widget.ImageButton"
        android:icon="@drawable/ic_reload_white_24dp"/>

    <item android:id="@+id/action_fontsize"
        android:title="@string/fontsize"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_format_size_white_24dp"/>

    <item android:id="@+id/action_width"
        android:title="@string/scr_w"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_transform_white_24dp"/>

    <item android:id="@+id/action_outline"
        android:title="@string/elements_outline"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_outline_white_24dp"/>

    <item android:id="@+id/action_save"
        android:title="@string/save"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_content_save_white_24dp"/>
    <item android:id="@+id/action_choose_file"
        android:title="@string/get_content"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_content_save_white_24dp"/>
    <item android:id="@+id/cache_mode"
        android:title="@string/cache_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_sd_card_black_24dp"/>
    <item android:id="@+id/action_about"
        android:title="@string/about_program"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_info_black_24dp"/>
    <item android:id="@+id/action_close"
        android:title="@string/getActivity_finish"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_close_white_24dp"/>
</menu>
